--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.5",
     "@types/prompts": "^2.4.9",
+    "@types/ramda": "^0.29.10",
+    "chalk": "^5.3.0",
+    "cli-markdown": "^3.2.2",
     "clipboardy": "^4.0.0",
     "find-process": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.44",
     "open": "^10.0.3",
+    "prettier": "^3.2.4",
+    "prompt": "^1.3.0",
     "prompts": "^2.4.2",
+    "ramda": "^0.29.1",
+    "run-applescript": "^7.0.0",
+    "zod": "^3.22.4",
     "zx": "^7.2.3"
   }
 }
