--- a/package.json
+++ b/package.json
@@ -6,27 +6,37 @@
     "@types/bun": "latest"
   },
   "scripts": {
-    "run": "bun run index.ts"
+    "run": "bun run index.ts",
+    "entr": "export a1=/Users/re4388/project/personal/lang/bun/bun_cli_0/scripts/a1.ts && ls $a1 | entr -r bun $a1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/listr": "^0.14.9",
+    "@types/omelette": "^0.4.4",
     "@types/prompts": "^2.4.9",
     "@types/ramda": "^0.29.10",
     "chalk": "^5.3.0",
     "cli-markdown": "^3.2.2",
     "clipboardy": "^4.0.0",
+    "execa": "^8.0.1",
     "find-process": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
+    "listr": "^0.14.3",
+    "meow": "^13.1.0",
+    "messaging-api-line": "^1.1.0",
     "moment-timezone": "^0.5.44",
+    "ngrok": "^5.0.0-beta.2",
+    "omelette": "^0.4.17",
     "open": "^10.0.3",
     "prettier": "^3.2.4",
     "prompt": "^1.3.0",
     "prompts": "^2.4.2",
     "ramda": "^0.29.1",
     "run-applescript": "^7.0.0",
+    "terminal-link": "^3.0.0",
     "zod": "^3.22.4",
     "zx": "^7.2.3"
   }
