--- a/package.json
+++ b/package.json
@@ -13,16 +13,34 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@inquirer/checkbox": "^1.5.2",
+    "@inquirer/editor": "^2.0.0",
+    "@inquirer/input": "^2.0.0",
+    "@inquirer/prompts": "^3.3.2",
+    "@inquirer/rawlist": "^1.2.16",
+    "@inquirer/select": "^1.3.3",
+    "@types/figlet": "^1.5.8",
+    "@types/inquirer": "^9.0.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/listr": "^0.14.9",
     "@types/omelette": "^0.4.4",
+    "@types/ora": "^3.2.0",
     "@types/prompts": "^2.4.9",
     "@types/ramda": "^0.29.10",
+    "boxen": "^7.1.1",
     "chalk": "^5.3.0",
     "cli-markdown": "^3.2.2",
+    "cli-table3": "^0.6.3",
     "clipboardy": "^4.0.0",
+    "esc-exit": "^3.0.1",
     "execa": "^8.0.1",
+    "exit-hook": "^4.0.0",
+    "external-editor": "^3.1.0",
+    "figlet": "^1.7.0",
     "find-process": "^1.4.7",
+    "got": "^14.1.0",
+    "inquirer": "^9.2.14",
+    "jsome": "^2.5.0",
     "jsonwebtoken": "^9.0.2",
     "listr": "^0.14.3",
     "meow": "^13.1.0",
@@ -31,12 +49,16 @@
     "ngrok": "^5.0.0-beta.2",
     "omelette": "^0.4.17",
     "open": "^10.0.3",
+    "ora": "^8.0.1",
     "prettier": "^3.2.4",
+    "pretty-error": "^4.0.0",
     "prompt": "^1.3.0",
     "prompts": "^2.4.2",
     "ramda": "^0.29.1",
+    "restore-cursor": "^5.0.0",
     "run-applescript": "^7.0.0",
     "terminal-link": "^3.0.0",
+    "trash": "^8.1.1",
     "zod": "^3.22.4",
     "zx": "^7.2.3"
   }
