--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "cli-markdown": "^3.2.2",
     "cli-table3": "^0.6.3",
     "clipboardy": "^4.0.0",
+    "commander": "^12.0.0",
+    "enquirer": "^2.4.1",
+    "env-paths": "^3.0.0",
     "esc-exit": "^3.0.1",
     "execa": "^8.0.1",
     "exit-hook": "^4.0.0",
@@ -39,10 +42,14 @@
     "figlet": "^1.7.0",
     "find-process": "^1.4.7",
     "got": "^14.1.0",
+    "http": "^0.0.1-security",
     "inquirer": "^9.2.14",
+    "is-url": "^1.2.4",
     "jsome": "^2.5.0",
+    "json-colorizer": "^2.2.2",
     "jsonwebtoken": "^9.0.2",
     "listr": "^0.14.3",
+    "load-json-file": "^7.0.1",
     "meow": "^13.1.0",
     "messaging-api-line": "^1.1.0",
     "moment-timezone": "^0.5.44",
@@ -57,8 +64,11 @@
     "ramda": "^0.29.1",
     "restore-cursor": "^5.0.0",
     "run-applescript": "^7.0.0",
+    "serve-handler": "^6.1.5",
     "terminal-link": "^3.0.0",
+    "tmp": "^0.2.1",
     "trash": "^8.1.1",
+    "tunnelmole": "^2.2.14",
     "zod": "^3.22.4",
     "zx": "^7.2.3"
   }
