--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ngrok": "^5.0.0-beta.2",
     "omelette": "^0.4.17",
     "open": "^10.0.3",
+    "openai": "^4.28.0",
     "ora": "^8.0.1",
     "prettier": "^3.2.4",
     "pretty-error": "^4.0.0",
