--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/inquirer": "^9.0.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/listr": "^0.14.9",
+    "@types/lunr": "^2.3.7",
     "@types/omelette": "^0.4.4",
     "@types/ora": "^3.2.0",
     "@types/prompts": "^2.4.9",
@@ -33,6 +34,7 @@
     "cli-table3": "^0.6.3",
     "clipboardy": "^4.0.0",
     "commander": "^12.0.0",
+    "csvtojson": "^2.0.10",
     "enquirer": "^2.4.1",
     "env-paths": "^3.0.0",
     "esc-exit": "^3.0.1",
@@ -41,6 +43,7 @@
     "external-editor": "^3.1.0",
     "figlet": "^1.7.0",
     "find-process": "^1.4.7",
+    "fzf-bun": "^0.1.3",
     "got": "^14.1.0",
     "http": "^0.0.1-security",
     "inquirer": "^9.2.14",
@@ -50,6 +53,7 @@
     "jsonwebtoken": "^9.0.2",
     "listr": "^0.14.3",
     "load-json-file": "^7.0.1",
+    "lunr": "^2.3.9",
     "meow": "^13.1.0",
     "messaging-api-line": "^1.1.0",
     "moment-timezone": "^0.5.44",
@@ -70,6 +74,7 @@
     "tmp": "^0.2.1",
     "trash": "^8.1.1",
     "tunnelmole": "^2.2.14",
+    "write-json-file": "^5.0.0",
     "zod": "^3.22.4",
     "zx": "^7.2.3"
   }
