--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "open": "^10.0.3",
     "openai": "^4.28.0",
     "ora": "^8.0.1",
+    "p-queue": "^8.0.1",
     "prettier": "^3.2.4",
     "pretty-error": "^4.0.0",
     "prompt": "^1.3.0",
