--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@inquirer/rawlist": "^1.2.16",
     "@inquirer/select": "^1.3.3",
     "@types/figlet": "^1.5.8",
+    "@types/google-spreadsheet": "^4.0.0",
     "@types/inquirer": "^9.0.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/listr": "^0.14.9",
@@ -44,6 +45,8 @@
     "figlet": "^1.7.0",
     "find-process": "^1.4.7",
     "fzf-bun": "^0.1.3",
+    "google-auth-library": "^9.6.3",
+    "google-spreadsheet": "^4.1.1",
     "got": "^14.1.0",
     "http": "^0.0.1-security",
     "inquirer": "^9.2.14",
