this is test for gitui

--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@google-cloud/translate": "^8.2.0",
     "@inquirer/checkbox": "^1.5.2",
     "@inquirer/editor": "^2.0.0",
     "@inquirer/input": "^2.0.0",
     "@inquirer/prompts": "^3.3.2",
     "@inquirer/rawlist": "^1.2.16",
     "@inquirer/select": "^1.3.3",
+    "@mozilla/readability": "^0.5.0",
     "@notionhq/client": "^2.2.14",
     "@types/figlet": "^1.5.8",
     "@types/google-spreadsheet": "^4.0.0",
     "@types/inquirer": "^9.0.7",
+    "@types/jsdom": "^21.1.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/listr": "^0.14.9",
     "@types/lunr": "^2.3.7",
@@ -31,6 +34,7 @@
     "@types/ora": "^3.2.0",
     "@types/prompts": "^2.4.9",
     "@types/ramda": "^0.29.10",
+    "bcrypt": "^5.1.1",
     "boxen": "^7.1.1",
     "chalk": "^5.3.0",
     "cli-markdown": "^3.2.2",
@@ -51,12 +55,14 @@
     "figlet": "^1.7.0",
     "find-process": "^1.4.7",
     "fzf-bun": "^0.1.3",
-    "google-auth-library": "^9.6.3",
+    "google-auth-library": "^9.9.0",
     "google-spreadsheet": "^4.1.1",
     "got": "^14.1.0",
     "http": "^0.0.1-security",
     "inquirer": "^9.2.14",
     "is-url": "^1.2.4",
+    "jose": "^5.2.3",
+    "jsdom": "^24.0.0",
     "jsome": "^2.5.0",
     "json-colorizer": "^2.2.2",
     "jsonwebtoken": "^9.0.2",
@@ -69,7 +75,7 @@
     "ngrok": "^5.0.0-beta.2",
     "omelette": "^0.4.17",
     "open": "^10.0.3",
-    "openai": "^4.28.0",
+    "openai": "^4.40.2",
     "ora": "^8.0.1",
     "p-queue": "^8.0.1",
     "prettier": "^3.2.4",
@@ -80,12 +86,14 @@
     "restore-cursor": "^5.0.0",
     "run-applescript": "^7.0.0",
     "serve-handler": "^6.1.5",
+    "systeminformation": "^5.22.0",
     "terminal-link": "^3.0.0",
     "tmp": "^0.2.1",
     "trash": "^8.1.1",
     "tunnelmole": "^2.2.14",
+    "voici.js": "^2.1.0",
     "write-json-file": "^5.0.0",
     "zod": "^3.22.4",
-    "zx": "^7.2.3"
+    "zx": "8.0"
   }
 }
