--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
    "cSpell.words": [
       "creds",
-      "pids"
+      "paralleldrive",
+      "pids",
+      "typebox"
    ],
    "workbench.colorCustomizations": {
       "activityBar.activeBackground": "#65c89b",
