--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@inquirer/select": "^1.3.3",
     "@mozilla/readability": "^0.5.0",
     "@notionhq/client": "^2.2.14",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@types/figlet": "^1.5.8",
     "@types/google-spreadsheet": "^4.0.0",
     "@types/inquirer": "^9.0.7",
@@ -30,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/listr": "^0.14.9",
     "@types/lunr": "^2.3.7",
+    "@types/node": "^20.14.7",
     "@types/omelette": "^0.4.4",
     "@types/ora": "^3.2.0",
     "@types/prompts": "^2.4.9",
@@ -46,6 +48,8 @@
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.4",
+    "drizzle-typebox": "^0.1.1",
+    "elysia": "^1.0.24",
     "enquirer": "^2.4.1",
     "env-paths": "^3.0.0",
     "esc-exit": "^3.0.1",
@@ -60,6 +64,8 @@
     "got": "^14.1.0",
     "http": "^0.0.1-security",
     "inquirer": "^9.2.14",
+    "install": "^0.13.0",
+    "ioredis": "^5.4.1",
     "is-url": "^1.2.4",
     "jose": "^5.2.3",
     "jsdom": "^24.0.0",
@@ -94,6 +100,6 @@
     "voici.js": "^2.1.0",
     "write-json-file": "^5.0.0",
     "zod": "^3.22.4",
-    "zx": "8.0"
+    "zx": "^8.1.3"
   }
 }
