--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/ora": "^3.2.0",
     "@types/prompts": "^2.4.9",
     "@types/ramda": "^0.29.10",
+    "awesome-phonenumber": "^6.9.0",
     "bcrypt": "^5.1.1",
     "boxen": "^7.1.1",
     "chalk": "^5.3.0",
@@ -84,6 +85,7 @@
     "openai": "^4.40.2",
     "ora": "^8.0.1",
     "p-queue": "^8.0.1",
+    "phone": "^3.1.45",
     "prettier": "^3.2.4",
     "pretty-error": "^4.0.0",
     "prompt": "^1.3.0",
